@@ -2,6 +2,8 @@
 
     * src/main.c: Display command line help.
     Patch by Adam Schreiber (bug #303463)
+	* agent-seahore-agent.c: Use popt for command line handling.
+	Patch by Adam Schreiber (bug #303495)
 	
 2005-05-07  Nate Nielsen  <nielsen@memberwebs.com>
 
